--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/occs/nine#readme",
   "devDependencies": {
+    "browserify": "^14.5.0",
     "eslint": "3.19.0",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-import": "2.3.0",
@@ -35,6 +36,7 @@
     "husky": "0.13.4",
     "npm-run-all": "4.0.2",
     "stylelint": "7.10.1",
-    "stylelint-config-standard": "16.0.0"
+    "stylelint-config-standard": "16.0.0",
+    "watchify": "^3.9.0"
   }
 }
