--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "stylelint": "7.10.1",
     "stylelint-config-standard": "16.0.0",
     "watchify": "^3.9.0"
+  },
+  "dependencies": {
+    "express": "^4.16.2"
   }
 }
