--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-standard": "3.0.1",
     "htmlhint": "0.9.13",
     "husky": "0.13.4",
+    "nodemon": "^1.12.1",
     "npm-run-all": "4.0.2",
     "stylelint": "7.10.1",
     "stylelint-config-standard": "16.0.0",
