--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "occs-nine",
+  "name": "short-circuit",
   "version": "1.0.0",
-  "description": "Git repository for the ninth cohort at OC|CS.",
+  "description": "An app for web users who want to draw on a collective, real-time updating canvas.",
+  "engines": {
+    "node": "8.2.1"
+  },
   "main": "index.js",
   "private": true,
-  "license": "LicenseRef-LICENSE",
+  "license": "ISC",
   "scripts": {
     "bundle": "browserify client/main.js -o server/public/bundle.js",
     "lint": "run-p lint:*",
@@ -13,6 +16,7 @@
     "lint:js": "eslint ./**/*.js",
     "test": "npm run lint",
     "precommit": "npm test",
+    "postinstall": "browserify client/main.js -o server/public/bundle.js",
     "start": "node server/index.js",
     "watch:client": "watchify client/main.js -v -o server/public/bundle.js",
     "watch:server": "nodemon server/index.js",
@@ -20,14 +24,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/occs/nine.git"
+    "url": "git+https://github.com/danielduffield/short-circuit.git"
   },
   "keywords": [],
-  "author": "OC|CS",
+  "author": "",
   "bugs": {
-    "url": "https://github.com/occs/nine/issues"
+    "url": "https://github.com/danielduffield/short-circuit/issues"
   },
-  "homepage": "https://github.com/occs/nine#readme",
+  "homepage": "https://github.com/danielduffield/short-circuit#readme",
   "devDependencies": {
     "browserify": "^14.5.0",
     "eslint": "3.19.0",
